# myjules

./: .env.template  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.in  requirements.txt  run_tests.py  test-report.xml
minijules/: agents.py  app.py  config.json.template  indexing.py  language_config.json  query_generator.py  requirements.txt  result.py  tools.py  types.py
minijules/chroma_db/: chroma.sqlite3
minijules/prompts/: core_agent_system_prompt.txt
minijules/workspace/: utils.js
minijules/workspace/math/: operations.py
tests/: test_advanced_rag.py  test_app_integrations.py  test_composite_tools.py  test_debugger.py  test_indexing.py  test_orchestration.py  test_professional_workflow.py  test_safety.py  test_stateful_tools.py  test_tdd_workflow.py  test_tools.py
