[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minijules"
version = "1.0.0"
authors = [
  { name="Jules, The AI", email="jules@example.com" },
]
description = "An autonomous AI developer assistant based on a Jules-like architecture."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyautogen",
    "chromadb",
    "sentence-transformers",
    "tree-sitter",
    "tree-sitter-language-pack",
    "GitPython",
    "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/example/minijules"
"Bug Tracker" = "https://github.com/example/minijules/issues"

[project.scripts]
minijules = "minijules.app:main"